fixed users overflowing previous chats window

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -75,8 +75,8 @@ html,body {
 .hero-module {
     width: 100%;
     height: 85vh;
-    // display: table;
-    // table-layout: fixed;
+    display: table;
+    table-layout: fixed;
     background-color: rgba(29,181,171,0.75);
     background: 
     linear-gradient(
@@ -89,12 +89,8 @@ html,body {
   	-o-background-size: cover;
   	background-size: cover;
 }
-.hero-text-wrapper {
-	display: table;
-	table-layout: fixed;
-}
 
-.hero-text-section {
+.hero-text-wrapper {
 	width: 100%;
 	display: table-cell;
 	vertical-align: middle;
